--- a/flask_crud_app/cloudbuild.yaml
+++ b/flask_crud_app/cloudbuild.yaml
@@ -1,18 +1,18 @@
 steps:
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app-nm', '.']
+  args: ['build', '-t', 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app', '.']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app-nm']
+  args: ['push', 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app']
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - 'run'
   - 'deploy'
-  - 'flask_app-nm'
+  - 'flask_app'
   - '--image'
-  - 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app-nm'
+  - 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app'
   - '--port'
   - '8080'
   - '--region'
@@ -29,7 +29,7 @@ steps:
   
 
 images:
-- us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app-nm
+- us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask_app
 
 options:
   logging: CLOUD_LOGGING_ONLY
