--- a/flask_crud_app/Dockerfile
+++ b/flask_crud_app/Dockerfile
@@ -7,6 +7,7 @@ COPY . .
 RUN pip3 install -r requirements.txt
 
 EXPOSE 8080
+run python app.py
 # CMD [ "python3", "-m", "flask", "run", "--host=0.0.0.0", "--port=5000"]
-CMD [ "python3", "-m", "flask", "run"]
+# CMD [ "python3", "-m", "flask", "run"]
 
