--- a/flask_crud_app/cloudbuild.yaml
+++ b/flask_crud_app/cloudbuild.yaml
@@ -14,8 +14,8 @@ steps:
   - 'flask-app'
   - '--image'
   - 'us-central1-docker.pkg.dev/gcp-training-710/gcf-artifacts/flask-app'
-  - '--port'
-  - '5000'
+  # - '--port'
+  # - '5000'
   - '--region'
   - 'us-central1'
   - '--platform'
